<resources>

    <string name="url_">http://192.168.100.14/FirmGround/REST/</string>
    <string name="url">http://qa.monshiapp.com/FirmGround/REST/</string>
    <string name="imageBaseUrl_">http://192.168.100.14/FirmGround</string>
    <string name="imageBaseUrl">http://qa.monshiapp.com</string>

    <string name="remaining_path">/fg/media/location_images/</string>

    <string name="ticks">http://qa.monshiapp.com</string>


    <string name="app_name">FirmGround</string>
    <string name="app_name_splash">firmground</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login">LOG IN</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="str_forgot_password">Forgot password?</string>
    <string name="str_not_signed_up_yet">Not signed up yet?</string>
    <string name="str_sign_up_here">Sign up here</string>
    <string name="str_sign_up">Sign up</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="str_fg"><![CDATA[<b>f</b><p>g</p>]]></string>
    <string name="title_activity_chat_page">ChatPageActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section here: %1$d</string>
    <string name="str_location">Location</string>
    <string name="str_date">Date</string>
    <string name="str_day_night">Day/ Night</string>
    <string name="str_pitch_no">Pitch</string>
    <string name="str_truf">Turf</string>
    <string name="str_boots">Boots</string>
    <string name="str_conditions">Conditions</string>
    <string name="str_set_reminder">Set Reminder</string>
    <string name="str_cancel_game">Cancel Game</string>
    <string name="str_kickoff">KO</string>
    <string name="str_a_side">A-side</string>
    <string name="str_title_message">Share link</string>
    <string name="str_send_message">Would you like to message to non-register user</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>

    <string name="default_notification_channel_id">Channel Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_enter_email">Enter email</string>
    <string name="str_select_date">Select date</string>
    <string name="str_contact">Contact</string>
    <string name="str_profile_name">Name</string>
    <string name="str_address">Address</string>
    <string name="str_star">Star</string>

    <string-array name="array_name">
        <item>Select KO</item>
        <item>12:00 AM</item>
        <item>12:30 AM</item>
        <item>1:00 AM</item>
        <item>1:30 AM</item>
        <item>2:00 AM</item>
        <item>2:30 AM</item>
        <item>3:00 AM</item>
        <item>3:30 AM</item>
        <item>4:00 AM</item>
        <item>4:30 AM</item>
        <item>5:00 AM</item>
        <item>5:30 AM</item>
        <item>6:00 AM</item>
        <item>6:30 AM</item>
        <item>7:00 AM</item>
        <item>7:30 AM</item>
        <item>8:00 AM</item>
        <item>8:30 AM</item>
        <item>9:00 AM</item>
        <item>9:30 AM</item>
        <item>10:00 AM</item>
        <item>10:30 AM</item>
        <item>11:00 AM</item>
        <item>11:30 AM</item>
        <item>12:00 PM</item>
        <item>12:30 PM</item>
        <item>1:00 PM</item>
        <item>1:30 PM</item>
        <item>2:00 PM</item>
        <item>2:30 PM</item>
        <item>3:00 PM</item>
        <item>3:30 PM</item>
        <item>4:00 PM</item>
        <item>4:30 PM</item>
        <item>5:00 PM</item>
        <item>5:30 PM</item>
        <item>6:00 PM</item>
        <item>6:30 PM</item>
        <item>7:00 PM</item>
        <item>7:30 PM</item>
        <item>8:00 PM</item>
        <item>8:30 PM</item>
        <item>9:00 PM</item>
        <item>9:30 PM</item>
        <item>10:00 PM</item>
        <item>10:30 PM</item>
        <item>11:00 PM</item>
        <item>11:30 PM</item>
    </string-array>

    <string-array name="array_A_side">
        <item>Select no of players</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
    </string-array>

    <string-array name="array_currency">
        <item>GBP</item>
        <item>Dollar</item>
        <item>PKR</item>
        <item>IND</item>
    </string-array>

    <string-array name="array_game_type">
        <item>Select Game</item>
        <item>Friendly</item>
        <item>League</item>
        <item>Training</item>
        <item>Exhibition</item>
        <item>Charity</item>
        <item>Cup</item>
        <item>Kick About</item>
        <item>Futsal</item>
        <item>Tournament</item>
    </string-array>

    <string-array name="day_night">
        <item>Day</item>
        <item>Night</item>
    </string-array>

    <string-array name="recurring_game">
        <item>Select</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="match_type">
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>

    <string-array name="team_1">
        <item>-</item>
        <item>N/A</item>
        <item>Bibs</item>
        <item>Non-Bibs</item>
        <item>Skins</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Purple</item>
        <item>Pink</item>
        <item>Brown</item>
        <item>Black</item>
        <item>White</item>
        <item>Grey</item>
    </string-array>

    <!--
    N/A
    Bibs
    Non-Bibs
    Skins
    Red
    Orange
    Yellow
    Green
    Blue
    Purple
    Pink
    Brown
    Black
    White
    Grey
-->
    <string-array name="team_2">
        <item>-</item>
        <item>N/A</item>
        <item>Bibs</item>
        <item>Non-Bibs</item>
        <item>Skins</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Purple</item>
        <item>Pink</item>
        <item>Brown</item>
        <item>Black</item>
        <item>White</item>
        <item>Grey</item>
    </string-array>

</resources>
